possible mobile horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
     overflow: hidden;
 }
 
+.hero{
+    background: #000;
+    overflow: hidden;
+}
+
 nav {
     height: 80px;
     background: #041111;
@@ -36,9 +41,6 @@ nav a:hover {
     text-shadow:none;
 }
 
-.hero{
-    background: #000
-}
 
 .hero-container {
     display: grid;
